set01/problem10_compile_errors.txt
Compilation started at 11/2/2023, 10:34:09 AM
Compilation finished at 11/2/2023, 10:34:14 AM
Compilation started at 11/2/2023, 10:42:12 AM
Compilation finished at 11/2/2023, 10:42:15 AM
Compilation started at 11/2/2023, 10:44:56 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:13:23: warning: passing argument 1 of 'input_two_strings' from incompatible pointer type [-Wincompatible-pointer-types]
     input_two_strings(&str1,&str2);
                       ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:5:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void input_two_strings(char *string1, char *string2);
      ^~~~~~~~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:13:29: warning: passing argument 2 of 'input_two_strings' from incompatible pointer type [-Wincompatible-pointer-types]
     input_two_strings(&str1,&str2);
                             ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:5:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void input_two_strings(char *string1, char *string2);
      ^~~~~~~~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:14:28: warning: passing argument 1 of 'stringcompare' from incompatible pointer type [-Wincompatible-pointer-types]
     result = stringcompare(&str1,&str2);
                            ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:6:5: note: expected 'char *' but argument is of type 'char (*)[100]'
 int stringcompare(char *string1, char *string2);
     ^~~~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:14:34: warning: passing argument 2 of 'stringcompare' from incompatible pointer type [-Wincompatible-pointer-types]
     result = stringcompare(&str1,&str2);
                                  ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:6:5: note: expected 'char *' but argument is of type 'char (*)[100]'
 int stringcompare(char *string1, char *string2);
     ^~~~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:14:12: error: assignment to expression with array type
     result = stringcompare(&str1,&str2);
            ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:15:12: warning: passing argument 1 of 'output' from incompatible pointer type [-Wincompatible-pointer-types]
     output(&str1,&str2,result);
            ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:7:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void output(char *string1, char *string2, int result);
      ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:15:18: warning: passing argument 2 of 'output' from incompatible pointer type [-Wincompatible-pointer-types]
     output(&str1,&str2,result);
                  ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:7:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void output(char *string1, char *string2, int result);
      ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:15:24: warning: passing argument 3 of 'output' makes integer from pointer without a cast [-Wint-conversion]
     output(&str1,&str2,result);
                        ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:7:6: note: expected 'int' but argument is of type 'char *'
 void output(char *string1, char *string2, int result);
      ^~~~~~
Compilation finished at 11/2/2023, 10:45:00 AM
Compilation started at 11/2/2023, 10:45:14 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:13:23: warning: passing argument 1 of 'input_two_strings' from incompatible pointer type [-Wincompatible-pointer-types]
     input_two_strings(&str1,&str2);
                       ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:5:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void input_two_strings(char *string1, char *string2);
      ^~~~~~~~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:13:29: warning: passing argument 2 of 'input_two_strings' from incompatible pointer type [-Wincompatible-pointer-types]
     input_two_strings(&str1,&str2);
                             ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:5:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void input_two_strings(char *string1, char *string2);
      ^~~~~~~~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:14:33: warning: passing argument 1 of 'stringcompare' from incompatible pointer type [-Wincompatible-pointer-types]
     result[100] = stringcompare(&str1,&str2);
                                 ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:6:5: note: expected 'char *' but argument is of type 'char (*)[100]'
 int stringcompare(char *string1, char *string2);
     ^~~~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:14:39: warning: passing argument 2 of 'stringcompare' from incompatible pointer type [-Wincompatible-pointer-types]
     result[100] = stringcompare(&str1,&str2);
                                       ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:6:5: note: expected 'char *' but argument is of type 'char (*)[100]'
 int stringcompare(char *string1, char *string2);
     ^~~~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:15:12: warning: passing argument 1 of 'output' from incompatible pointer type [-Wincompatible-pointer-types]
     output(&str1,&str2,result);
            ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:7:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void output(char *string1, char *string2, int result);
      ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:15:18: warning: passing argument 2 of 'output' from incompatible pointer type [-Wincompatible-pointer-types]
     output(&str1,&str2,result);
                  ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:7:6: note: expected 'char *' but argument is of type 'char (*)[100]'
 void output(char *string1, char *string2, int result);
      ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:15:24: warning: passing argument 3 of 'output' makes integer from pointer without a cast [-Wint-conversion]
     output(&str1,&str2,result);
                        ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set01\problem10.c:7:6: note: expected 'int' but argument is of type 'char *'
 void output(char *string1, char *string2, int result);
      ^~~~~~
Compilation finished at 11/2/2023, 10:45:19 AM
